# ProjektR

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md
components/HAL/: CMakeLists.txt  hal_mmwave_uart.c
components/HAL/include/HAL/: hal_mmwave.h
components/app/: CMakeLists.txt  app_mmwave.c  app_mmwave_decoder.c  app_mmwave_hal_config.c  app_network.c  app_network_packet_serializer.c  mmWave_manager.c
components/app/include/app/: app_mmwave.h  app_mmwave_constants.h  app_mmwave_decoder.h  app_mmwave_hal_config.h  app_mmwave_manager.h  app_network.h  app_network_packet_serializer.h  app_types.h
components/board/: CMakeLists.txt  board.c  board.h  board_mmwave_uart_config.h  esp32_board.h
components/mmwave/: CMakeLists.txt  mmwave_core_seeed_studio.c
components/my_hal/: CMakeLists.txt  hal_mmwave_uart.c  hal_network.c  hal_wifi.c  hal_ws.c  system_monitor.c
components/platform/: CMakeLists.txt
components/platform/esp32/: esp32_events.c  esp32_memory.c  esp32_mutex.c  esp32_queue.c  esp32_task.c  esp32_time.c  esp32_uart.c  esp32_websocket.c  esp32_wifi_client.c
components/platform/include/platform/: platform.h  platform_events.h  platform_memory.h  platform_mutex.h  platform_queue.h  platform_task.h  platform_time.h  platform_uart.h  websocket.h  wifi_client.h
main/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  dataset_collector.c  test_app.c  test_hal.c  test_mmwave_core.c  test_stress.c
tests/include/tests/: dataset_collector.h  test_app.h  test_hal.h  test_mmwave_core.h  test_stress.h  test_wifi_config.h
(+13 files in other folders)
